Fix icon spacing.

--- a/src/scss/components/_about.scss
+++ b/src/scss/components/_about.scss
@@ -107,7 +107,7 @@
 
 	.remove-icon {
 		vertical-align: -2px;
-		margin-left: 1px;
+		margin: 0 1px;
 	}
 
 	.support {
